[gd_scene load_steps=8 format=3 uid="uid://bs8a7aih50n8h"]

[ext_resource type="Texture2D" uid="uid://b3sbyxvbqvf2g" path="res://c6.png" id="1_ux1fx"]
[ext_resource type="Texture2D" uid="uid://cxi4nx283evum" path="res://heric.png" id="2_gfat3"]
[ext_resource type="Texture2D" uid="uid://dkbifr0cjvii8" path="res://chuva.png" id="2_ywa6w"]
[ext_resource type="Script" path="res://sprite_2d_2.gd" id="3_dy3xj"]
[ext_resource type="AudioStream" uid="uid://dve7ln5pyr1u6" path="res://nome-pygbag (online-audio-converter.com).mp3" id="4_2f38x"]
[ext_resource type="AudioStream" uid="uid://5f3ge0xcgiff" path="res://cidade.wav" id="5_t6ifc"]
[ext_resource type="AudioStream" uid="uid://ciu7arjbtjd4e" path="res://Skyline - Ambient Track (Bladerunner _ Cyberpunk 2077 Inspired Huge Ambient Music).mp3" id="6_yqeaj"]

[node name="Node2D" type="Node2D"]

[node name="Node2D" type="Node2D" parent="."]

[node name="Chuva" type="Node2D" parent="Node2D"]

[node name="Sprite2D" type="Sprite2D" parent="Node2D"]
position = Vector2(1239.5, 537)
scale = Vector2(2.58646, 1.50556)
texture = ExtResource("1_ux1fx")

[node name="CPUParticles2D3" type="CPUParticles2D" parent="Node2D/Sprite2D"]
modulate = Color(1, 1, 1, 0.231373)
self_modulate = Color(0.564706, 0.741176, 1, 1)
position = Vector2(-300.99, -242.435)
scale = Vector2(0.249479, 0.44117)
texture = ExtResource("2_ywa6w")
gravity = Vector2(26, 1000)
linear_accel_max = 100.0
anim_speed_max = 107.32

[node name="CPUParticles2D2" type="CPUParticles2D" parent="Node2D/Sprite2D"]
modulate = Color(1, 1, 1, 0.211765)
self_modulate = Color(0.564706, 0.741176, 1, 1)
position = Vector2(308.679, -176.015)
scale = Vector2(0.249479, 0.44117)
texture = ExtResource("2_ywa6w")
gravity = Vector2(26, 1000)
anim_speed_max = 107.32

[node name="CPUParticles2D" type="CPUParticles2D" parent="Node2D/Sprite2D"]
modulate = Color(1, 1, 1, 0.117647)
self_modulate = Color(0.564706, 0.741176, 1, 1)
position = Vector2(-29.9681, -201.255)
scale = Vector2(0.499479, 0.664207)
texture = ExtResource("2_ywa6w")
gravity = Vector2(26, 1000)
anim_speed_max = 107.32

[node name="Sprite2D2" type="Sprite2D" parent="Node2D"]
position = Vector2(422.75, 880)
scale = Vector2(0.881097, 0.605073)
texture = ExtResource("2_gfat3")
script = ExtResource("3_dy3xj")

[node name="Dialogo" type="Label" parent="Node2D"]
offset_left = 807.0
offset_top = 260.0
offset_right = 1626.0
offset_bottom = 482.0
theme_type_variation = &"HeaderLarge"
theme_override_font_sizes/font_size = 100

[node name="NomeInput" type="LineEdit" parent="Node2D"]
visible = false
offset_left = 813.0
offset_top = 448.0
offset_right = 1607.0
offset_bottom = 570.0

[node name="Cidade" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("5_t6ifc")
volume_db = 24.0

[node name="SomPlayer" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("4_2f38x")
volume_db = 24.0

[node name="SomAmbience" type="AudioStreamPlayer" parent="Node2D"]
stream = ExtResource("6_yqeaj")
